# skills-cowork

./: IMPLEMENTATION_SUMMARY.md  README.md  ZUSTAND_STORES.md  package-lock.json  package.json
public/locales/en-US/: common.json
public/locales/zh-CN/: common.json
skills-cowork/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
skills-cowork/src/: App.tsx
skills-cowork/src-tauri/: Cargo.toml  RUST_BACKEND_IMPLEMENTATION.md  tauri.conf.json
skills-cowork/src-tauri/src/: main.rs
skills-cowork/src-tauri/src/commands/: chat.rs  config.rs  file.rs  mod.rs  skills.rs
skills-cowork/src-tauri/src/models/: chat.rs  config.rs  file.rs  mod.rs  response.rs
skills-cowork/src-tauri/src/services/: cli_service.rs  config_service.rs  file_service.rs  mod.rs  network_service.rs
skills-cowork/src-tauri/src/utils/: error.rs  logger.rs  mod.rs  path_validator.rs
skills-cowork/src/components/: CodeEditor.tsx  FileExplorer.tsx  MainLayout.tsx
skills-cowork/src/i18n/: config.ts
skills-cowork/src/store/: index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: I18nProvider.tsx
src/components/chat/: ChatPanel.tsx
src/components/common/: WelcomePage.tsx
src/components/editor/: EditorPanel.tsx
src/contexts/: ThemeContext.tsx
src/services/: chatService.ts  configService.ts  fileService.ts  index.ts  skillsService.ts
src/stores/: appStore.ts  chatStore.ts  configStore.ts  editorStore.ts  fileSystemStore.ts  index.ts  skillsStore.ts
src/styles/: components.css  topbar.css
src/types/: chat.ts  config.ts  editor.ts  file.ts  index.ts  skills.ts
src/utils/: logger.ts
(+3 files in other folders)
