[package]
name = "skills-cowork"
version = "0.1.0"
description = "A Tauri + React + TypeScript development environment"
authors = ["you"]
license = ""
repository = ""
default-run = "skills-cowork"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
  "devtools",
] }
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
log = "0.4"
simplelog = "0.12"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]